testsuite/tests/typecheck/should_fail/T18640b.stderr

T18640b.hs:14:10: error: [GHC-25897]
    • Couldn't match kind ‘k’ with ‘a’
      Expected kind ‘forall b -> a’, but ‘F1’ has kind ‘forall k -> k’
      ‘k’ is a rigid type variable bound by
        the type k
        at T18640b.hs:14:3-11
      ‘a’ is a rigid type variable bound by
        a family instance declaration
        at T18640b.hs:14:6
    • In the type ‘F1’
      In the type family declaration for ‘F3’
